@@ -1,5 +1,5 @@
 dnl
-dnl $Id: configure.ac,v 1.4 2006-01-29 20:10:56 joostvb Exp $
+dnl $Id: configure.ac,v 1.5 2006-03-19 20:57:22 joostvb Exp $
 dnl
 dnl After editing this file, run automake to regenerate Makefile.in's.
 dnl Process this file with autoconf to produce a configure script.
@@ -22,7 +22,7 @@ AC_COPYRIGHT([
 Copyright (C) 2002, 2003, 2004, 2005, 2006 Joost van Baal <joostvb-caspar@mdcc.cx>
 ])
 
-AC_REVISION($Revision: 1.4 $)
+AC_REVISION($Revision: 1.5 $)
 
 AC_PROG_INSTALL
 AC_PROG_LN_S
@@ -32,6 +32,7 @@ AC_CONFIG_FILES([
    doc/Makefile
    mk/Makefile
    sgml/Makefile
+   script/Makefile
 ])
 
 AC_OUTPUT
