@@ -1,0 +1,5 @@
+## Process this file with automake to produce Makefile.in
+## $Id: Makefile.am,v 1.1 2006-03-19 20:57:23 joostvb Exp $
+## $Source: /cvsroot/caspar/caspar/caspar/script/Makefile.am,v $
+
+bin_SCRIPTS = csp_sucp
